# usb-intrusion-system

./: CMakeLists.txt  README.md  build.bat
include/: Config.h  DeviceController.h  EmailSender.h  Logger.h  USBMonitor.h  WebServer.h
src/: DeviceController.cpp  EmailSender.cpp  Logger.cpp  USBMonitor.cpp  WebServer.cpp  main.cpp
usb-monitor-frontend/: package-lock.json  package.json
usb-monitor-frontend/src/: App.js
